Fix 1px offset of the widget when hovered and the sidebar is collapsed

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -63,7 +63,8 @@ html {
             .item-content {
                 display: none;
                 width: 250px;
-                border: 1px solid rgba(0, 0, 0, 0.1);
+                border-right: 1px solid rgba(0, 0, 0, 0.1);
+                border-bottom: 1px solid rgba(0, 0, 0, 0.1);
             }
         }
 
